add getAllRoles endopoint and swagger
