# src/controllers/role_controller.go
@@ -1,0 +1,13 @@
+package controllers
+
+import (
+	"pet_api/src/services"
+
+	"github.com/gofiber/fiber/v2"
+)
+
+func RoleController(api fiber.Router) {
+	roleRoute := api.Group("/roles")
+
+	roleRoute.Get("/", services.GetAllRoles)
+}
