# src/dto/response/role_response.go
@@ -1,0 +1,7 @@
+package response
+
+type RoleResponse struct {
+	ID          uint64 `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
